fix: fixed menu burger z-index

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@
   border: none;
   position: relative;
   background: none;
+  z-index: 11;
 }
 @media (max-width: 768px) {
   .burger {
@@ -112,6 +113,7 @@
   padding: 46px 0 0 30px;
   font-size: 2.125em;
   font-weight: 600;
+  z-index: 10;
 }
 .nav-open .nav__link {
   color: #828282;
