--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -63,6 +63,7 @@
     border: none;
     position: relative;
     background: none;
+    z-index: 11;
 
     @media (max-width: 768px) {
         display: block;
@@ -124,6 +125,7 @@
         padding: 46px 0 0 30px;
         font-size: 2.125em;
         font-weight: 600;
+        z-index: 10;
     }
 
     .nav__link {
